UseState Section UserRow state

--- a/src/components/UserRow.module.css
+++ b/src/components/UserRow.module.css
@@ -9,15 +9,13 @@
 }
 
 .name {
-	width: 60%;
-}
-
-.name span {
+	width: 40%;
 	font-weight: bold;
 }
 
 .status,
-.role {
+.role,
+.action {
 	width: 20%;
 	display: flex;
 	justify-content: center;
